--- a/dlookr_slides.html
+++ b/dlookr_slides.html
@@ -4,7 +4,7 @@
     <title>dlookr Package</title>
     <meta charset="utf-8" />
     <meta name="author" content="Rachel Heise" />
-    <meta name="date" content="2022-09-15" />
+    <meta name="date" content="2022-09-16" />
     <script src="libs/header-attrs-2.15/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="extra.css" type="text/css" />
@@ -93,10 +93,10 @@ iris %&gt;% data.table()
 
 ```
      Sepal.Length Sepal.Width Petal.Length Petal.Width   Species
-  1:           NA         3.5          1.4         0.2    setosa
+  1:          5.1         3.5          1.4         0.2    setosa
   2:          4.9         3.0          1.4         0.2    setosa
   3:          4.7         3.2          1.3         0.2    setosa
-  4:          4.6         3.1          1.5         0.2    setosa
+  4:           NA         3.1          1.5         0.2    setosa
   5:          5.0         3.6          1.4         0.2    setosa
  ---                                                            
 146:          6.7         3.0          5.2         2.3 virginica
@@ -154,6 +154,8 @@ diagnose(iris)
 - This dataframe can be used with `dplyr` to perform any operations, including sorting and filtering
 
 ]
+--
+
 
 .pull-right[
 
@@ -185,10 +187,10 @@ diagnose_numeric(iris)
 # A tibble: 4 × 10
   variables      min    Q1  mean median    Q3   max  zero minus outlier
   &lt;chr&gt;        &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt; &lt;dbl&gt; &lt;int&gt; &lt;int&gt;   &lt;int&gt;
-1 Sepal.Length   4.3  5.12  5.87   5.8    6.4   7.9     0     0       0
-2 Sepal.Width    2    2.8   3.06   3      3.3   4.4     0     0       4
-3 Petal.Length   1    1.6   3.76   4.35   5.1   6.9     0     0       0
-4 Petal.Width    0.1  0.3   1.20   1.3    1.8   2.5     0     0       0
+1 Sepal.Length   4.3   5.1  5.87   5.8    6.4   7.9     0     0       0
+2 Sepal.Width    2     2.8  3.06   3      3.3   4.4     0     0       4
+3 Petal.Length   1     1.6  3.76   4.35   5.1   6.9     0     0       0
+4 Petal.Width    0.1   0.3  1.20   1.3    1.8   2.5     0     0       0
 ```
 
 --
@@ -199,7 +201,7 @@ diagnose_outlier(iris)
 
 ```
      variables outliers_cnt outliers_ratio outliers_mean with_mean without_mean
-1 Sepal.Length            0       0.000000           NaN  5.869178     5.869178
+1 Sepal.Length            0       0.000000           NaN  5.870548     5.870548
 2  Sepal.Width            4       2.666667         3.675  3.057333     3.040411
 3 Petal.Length            0       0.000000           NaN  3.758000     3.758000
 4  Petal.Width            0       0.000000           NaN  1.199333     1.199333
@@ -234,12 +236,11 @@ iris %&gt;%
 
 .pull-left[
 
-- `diagnose_category` is used to assess categorical variables including:
+- `diagnose_category` is used to assess categorical variables by:
 
-  - levels of each categorical variable
-  - number of observations for each level
-  - percentage of observations at each level
-  - rank of each level of a categorical variable
+  - Identifying the levels of each categorical variable
+  - Noting the number &amp; percentage of observations at each level
+  - Ranking each level in terms of number of observations
 
 ]
 --
@@ -292,10 +293,10 @@ describe(iris)
 # A tibble: 4 × 26
   described_varia…     n    na  mean    sd se_mean   IQR skewness kurtosis   p00
   &lt;chr&gt;            &lt;int&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;    &lt;dbl&gt;    &lt;dbl&gt; &lt;dbl&gt;
-1 Sepal.Length       146     4  5.87 0.824  0.0682  1.28    0.277   -0.526   4.3
-2 Sepal.Width        150     0  3.06 0.436  0.0356  0.5     0.319    0.228   2  
-3 Petal.Length       150     0  3.76 1.77   0.144   3.5    -0.275   -1.40    1  
-4 Petal.Width        150     0  1.20 0.762  0.0622  1.5    -0.103   -1.34    0.1
+1 Sepal.Length       146     4  5.87 0.822  0.0680   1.3    0.287   -0.525   4.3
+2 Sepal.Width        150     0  3.06 0.436  0.0356   0.5    0.319    0.228   2  
+3 Petal.Length       150     0  3.76 1.77   0.144    3.5   -0.275   -1.40    1  
+4 Petal.Width        150     0  1.20 0.762  0.0622   1.5   -0.103   -1.34    0.1
 # … with 16 more variables: p01 &lt;dbl&gt;, p05 &lt;dbl&gt;, p10 &lt;dbl&gt;, p20 &lt;dbl&gt;,
 #   p25 &lt;dbl&gt;, p30 &lt;dbl&gt;, p40 &lt;dbl&gt;, p50 &lt;dbl&gt;, p60 &lt;dbl&gt;, p70 &lt;dbl&gt;,
 #   p75 &lt;dbl&gt;, p80 &lt;dbl&gt;, p90 &lt;dbl&gt;, p95 &lt;dbl&gt;, p99 &lt;dbl&gt;, p100 &lt;dbl&gt;
@@ -319,12 +320,12 @@ iris %&gt;%
 
 ```
 # A tibble: 4 × 27
-  described_variables Species        n    na  mean    sd se_mean   IQR  skewness
-  &lt;chr&gt;               &lt;fct&gt;      &lt;int&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;     &lt;dbl&gt;
-1 Sepal.Length        setosa        43     4  4.99 0.355  0.0542 0.45   -9.05e-5
-2 Sepal.Length        versicolor    50     0  5.94 0.516  0.0730 0.7     1.05e-1
-3 Sepal.Length        virginica     50     0  6.59 0.636  0.0899 0.675   1.18e-1
-4 Sepal.Length        &lt;NA&gt;           3     0  5.37 0.379  0.219  0.350   1.60e+0
+  described_variables Species        n    na  mean    sd se_mean   IQR skewness
+  &lt;chr&gt;               &lt;fct&gt;      &lt;int&gt; &lt;int&gt; &lt;dbl&gt; &lt;dbl&gt;   &lt;dbl&gt; &lt;dbl&gt;    &lt;dbl&gt;
+1 Sepal.Length        setosa        44     3  5.02 0.367  0.0553 0.425   0.0361
+2 Sepal.Length        versicolor    50     0  5.94 0.516  0.0730 0.7     0.105 
+3 Sepal.Length        virginica     50     0  6.59 0.636  0.0899 0.675   0.118 
+4 Sepal.Length        &lt;NA&gt;           2     1  5    0      0      0      NA     
 # … with 18 more variables: kurtosis &lt;dbl&gt;, p00 &lt;dbl&gt;, p01 &lt;dbl&gt;, p05 &lt;dbl&gt;,
 #   p10 &lt;dbl&gt;, p20 &lt;dbl&gt;, p25 &lt;dbl&gt;, p30 &lt;dbl&gt;, p40 &lt;dbl&gt;, p50 &lt;dbl&gt;,
 #   p60 &lt;dbl&gt;, p70 &lt;dbl&gt;, p75 &lt;dbl&gt;, p80 &lt;dbl&gt;, p90 &lt;dbl&gt;, p95 &lt;dbl&gt;,
@@ -338,7 +339,9 @@ iris %&gt;%
 
 .pull-left[
 
-- Assess normality of continuous variables and plot log and sqrt transformations
+- Assess normality of continuous variables and plot log and sqrt transformations with `normality` function
+
+  - Shapiro-Wilk test is used to generate p-values
 
 
 ```r
@@ -349,7 +352,7 @@ normality(iris)
 # A tibble: 4 × 4
   vars         statistic  p_value sample
   &lt;chr&gt;            &lt;dbl&gt;    &lt;dbl&gt;  &lt;dbl&gt;
-1 Sepal.Length     0.980 2.81e- 2    150
+1 Sepal.Length     0.979 2.27e- 2    150
 2 Sepal.Width      0.985 1.01e- 1    150
 3 Petal.Length     0.876 7.41e-10    150
 4 Petal.Width      0.902 1.68e- 8    150
@@ -369,6 +372,11 @@ iris %&gt;%
 # Correlation
 .pull-left[
 
+- `correlate` function assesses the correlation between all continuous variables
+
+- Plotting the output of this function generates a correlation plot
+
+
 ```r
 correlate(iris)
 ```
@@ -377,10 +385,10 @@ correlate(iris)
 # A tibble: 12 × 3
    var1         var2         coef_corr
    &lt;fct&gt;        &lt;fct&gt;            &lt;dbl&gt;
- 1 Sepal.Width  Sepal.Length    -0.105
+ 1 Sepal.Width  Sepal.Length    -0.102
  2 Petal.Length Sepal.Length     0.867
  3 Petal.Width  Sepal.Length     0.811
- 4 Sepal.Length Sepal.Width     -0.105
+ 4 Sepal.Length Sepal.Width     -0.102
  5 Petal.Length Sepal.Width     -0.428
  6 Petal.Width  Sepal.Width     -0.366
  7 Sepal.Length Petal.Length     0.867
@@ -407,9 +415,11 @@ iris %&gt;%
 
 .pull-left[
 
-- Similar to `group_by()` in `dplyr`
+- Target variables are similar to `group_by()` in `dplyr`
 
 - Target variables are used to explore the relationship between a categorical variable and other variable values
+
+  - `target_by` function
 
 ]
 --
@@ -443,14 +453,12 @@ plot(cat_num)
   
 
 ]
----
-# Imputation - continuous
-.pull-left[
+--
+.pull-right[
 
 ```r
 sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Species, method = "knn")
-
-x = summary(sepallength_im)
+summary(sepallength_im)
 ```
 
 ```
@@ -462,19 +470,19 @@ x = summary(sepallength_im)
 described_variables "value"      "value"     
 n                   "146"        "150"       
 na                  "4"          "0"         
-mean                "5.869178"   "5.843007"  
-sd                  "0.8239991"  "0.8287494" 
-se_mean             "0.06819465" "0.06766710"
-IQR                 "1.275"      "1.300"     
-skewness            "0.2771148"  "0.3110547" 
-kurtosis            "-0.5263032" "-0.5506961"
+mean                "5.870548"   "5.846836"  
+sd                  "0.8217868"  "0.8247670" 
+se_mean             "0.06801156" "0.06734195"
+IQR                 "1.3"        "1.3"       
+skewness            "0.2866188"  "0.3184411" 
+kurtosis            "-0.5254899" "-0.5369823"
 p00                 "4.3"        "4.3"       
 p01                 "4.4"        "4.4"       
-p05                 "4.6"        "4.6"       
-p10                 "4.9"        "4.8"       
+p05                 "4.625"      "4.645"     
+p10                 "4.90"       "4.89"      
 p20                 "5.1"        "5.0"       
-p25                 "5.125"      "5.100"     
-p30                 "5.40"       "5.27"      
+p25                 "5.1"        "5.1"       
+p30                 "5.40"       "5.37"      
 p40                 "5.6"        "5.6"       
 p50                 "5.8"        "5.8"       
 p60                 "6.1"        "6.1"       
@@ -487,33 +495,45 @@ p99                 "7.7"        "7.7"
 p100                "7.9"        "7.9"       
 ```
 ]
---
+---
+# Imputation - continuous
+.pull-left[
+
+- Imputation methods for continuous variables include:
+
+  - mean
+  - median
+  - mode
+  - K-nearest neighbors (knn) 
+  - Recursive Partitioning and Regression Trees (rpart)
+  - Multivariate Imputation by Chained Equations (mice)
+  
+
+]
+
 .pull-right[
+
+
+```r
+sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Species, method = "knn")
+```
+
+
 
 ```r
 plot(sepallength_im)
 ```
 
-![](dlookr_slides_files/figure-html/unnamed-chunk-19-1.png)&lt;!-- --&gt;
-
-```r
-# add imputed variable to original data set
-
-iris_new &lt;- cbind(iris, sepallength_im)
-```
+![](dlookr_slides_files/figure-html/unnamed-chunk-20-1.png)&lt;!-- --&gt;
 ]
 ---
 
 # Imputation - categorical 
 .pull-left[
 - Imputation for categorical variables include:
-
   - mode
   - Recursive Partitioning and Regression Trees (rpart)
   - Multivariate Imputation by Chained Equations (mice)
-]
-
-.pull-right[
 
 
 ```r
@@ -521,41 +541,6 @@ library(mice)
 species_im &lt;- imputate_na(iris, Species, method = "mice")
 ```
 
-```
-
- iter imp variable
-  1   1  Sepal.Length  Species
-  1   2  Sepal.Length  Species
-  1   3  Sepal.Length  Species
-  1   4  Sepal.Length  Species
-  1   5  Sepal.Length  Species
-  2   1  Sepal.Length  Species
-  2   2  Sepal.Length  Species
-  2   3  Sepal.Length  Species
-  2   4  Sepal.Length  Species
-  2   5  Sepal.Length  Species
-  3   1  Sepal.Length  Species
-  3   2  Sepal.Length  Species
-  3   3  Sepal.Length  Species
-  3   4  Sepal.Length  Species
-  3   5  Sepal.Length  Species
-  4   1  Sepal.Length  Species
-  4   2  Sepal.Length  Species
-  4   3  Sepal.Length  Species
-  4   4  Sepal.Length  Species
-  4   5  Sepal.Length  Species
-  5   1  Sepal.Length  Species
-  5   2  Sepal.Length  Species
-  5   3  Sepal.Length  Species
-  5   4  Sepal.Length  Species
-  5   5  Sepal.Length  Species
-```
-
-```r
-plot(species_im)
-```
-
-![](dlookr_slides_files/figure-html/unnamed-chunk-20-1.png)&lt;!-- --&gt;
 
 ```r
 summary(species_im)
@@ -564,7 +549,7 @@ summary(species_im)
 ```
 * Impute missing values based on Multivariate Imputation by Chained Equations
  - method : mice
- - random seed : 96165
+ - random seed : 6931
 
 * Information of Imputation (before vs after)
            original imputation original_percent imputation_percent
@@ -574,10 +559,15 @@ virginica        50         50            33.33              33.33
 &lt;NA&gt;              3          0             2.00               0.00
 ```
 
+]
+--
+.pull-right[
+
 ```r
-iris_new &lt;- cbind(iris, species_im)
+plot(species_im)
 ```
 
+![](dlookr_slides_files/figure-html/unnamed-chunk-23-1.png)&lt;!-- --&gt;
 ]
 
 ---
@@ -585,53 +575,49 @@ iris_new &lt;- cbind(iris, species_im)
 
 .pull-left[
 
-- Imputation methods for outliers
-
+- Imputation methods for outliers:
   - mean
   - median
   - mode
   - capping (imputes upper outliers at 95th percentile and lower outliers at 5th percentile)
 
-]
----
-# Imputation - outliers
-.pull-left[
 
 ```r
 iris_outliers &lt;- imputate_outlier(iris, Sepal.Width, method="capping")
-iris_outliers
+summary(iris_outliers)
 ```
 
 ```
-  [1] 3.500 3.000 3.200 3.100 3.600 3.900 3.400 3.400 2.900 3.100 3.700 3.400
- [13] 3.000 3.000 4.000 3.800 3.900 3.500 3.800 3.800 3.400 3.700 3.600 3.300
- [25] 3.400 3.000 3.400 3.500 3.400 3.200 3.100 3.400 3.800 3.800 3.100 3.200
- [37] 3.500 3.600 3.000 3.400 3.500 2.300 3.200 3.500 3.800 3.000 3.800 3.200
- [49] 3.700 3.300 3.200 3.200 3.100 2.300 2.800 2.800 3.300 2.400 2.900 2.700
- [61] 2.345 3.000 2.200 2.900 2.900 3.100 3.000 2.700 2.200 2.500 3.200 2.800
- [73] 2.500 2.800 2.900 3.000 2.800 3.000 2.900 2.600 2.400 2.400 2.700 2.700
- [85] 3.000 3.400 3.100 2.300 3.000 2.500 2.600 3.000 2.600 2.300 2.700 3.000
- [97] 2.900 2.900 2.500 2.800 3.300 2.700 3.000 2.900 3.000 3.000 2.500 2.900
-[109] 2.500 3.600 3.200 2.700 3.000 2.500 2.800 3.200 3.000 3.800 2.600 2.200
-[121] 3.200 2.800 2.800 2.700 3.300 3.200 2.800 3.000 2.800 3.000 2.800 3.800
-[133] 2.800 2.800 2.600 3.000 3.400 3.100 3.000 3.100 3.100 3.100 2.700 3.200
-[145] 3.300 3.000 2.500 3.000 3.400 3.000
-attr(,"method")
-[1] "capping"
-attr(,"var_type")
-[1] "numerical"
-attr(,"outlier_pos")
-[1] 16 33 34 61
-attr(,"outliers")
-[1] 4.4 4.1 4.2 2.0
-attr(,"type")
-[1] "outliers"
-attr(,"message")
-[1] "complete imputation"
-attr(,"success")
-[1] TRUE
-attr(,"class")
-[1] "imputation" "numeric"   
+Impute outliers with capping
+
+* Information of Imputation (before vs after)
+                    Original     Imputation  
+described_variables "value"      "value"     
+n                   "150"        "150"       
+na                  "0"          "0"         
+mean                "3.057333"   "3.050967"  
+sd                  "0.4358663"  "0.4108379" 
+se_mean             "0.03558833" "0.03354478"
+IQR                 "0.5"        "0.5"       
+skewness            "0.3189657"  "0.1340705" 
+kurtosis            " 0.2282490" "-0.4114289"
+p00                 "2.0"        "2.2"       
+p01                 "2.2"        "2.2"       
+p05                 "2.34500"    "2.36975"   
+p10                 "2.5"        "2.5"       
+p20                 "2.7"        "2.7"       
+p25                 "2.8"        "2.8"       
+p30                 "2.8"        "2.8"       
+p40                 "3"          "3"         
+p50                 "3"          "3"         
+p60                 "3.1"        "3.1"       
+p70                 "3.2"        "3.2"       
+p75                 "3.3"        "3.3"       
+p80                 "3.4"        "3.4"       
+p90                 "3.61"       "3.61"      
+p95                 "3.8"        "3.8"       
+p99                 "4.151"      "3.900"     
+p100                "4.4"        "4.0"       
 ```
 ]
 --
@@ -642,7 +628,7 @@ attr(,"class")
 plot(iris_outliers)
 ```
 
-![](dlookr_slides_files/figure-html/unnamed-chunk-22-1.png)&lt;!-- --&gt;
+![](dlookr_slides_files/figure-html/unnamed-chunk-25-1.png)&lt;!-- --&gt;
 ]
 
 ---
@@ -661,7 +647,7 @@ iris_t &lt;- transform(iris$Sepal.Length, method = "minmax")
 plot(iris_t)
 ```
 
-![](dlookr_slides_files/figure-html/unnamed-chunk-23-1.png)&lt;!-- --&gt;
+![](dlookr_slides_files/figure-html/unnamed-chunk-26-1.png)&lt;!-- --&gt;
 ]
 ---
 # Find Skewness
@@ -685,7 +671,7 @@ find_skewness(iris, value = TRUE)
 
 ```
 Sepal.Length  Sepal.Width Petal.Length  Petal.Width 
-       0.274        0.316       -0.272       -0.102 
+       0.284        0.316       -0.272       -0.102 
 ```
 
 ```r
@@ -730,12 +716,12 @@ binned type: kmeans
 number of bins: 4
 x
 B1 B2 B3 B4 
-44  7 57 42 
+50 25 45 30 
 ```
 ]
 ---
 
-# Binning plot
+# Binning
 .pull-left[
 
 ```r
@@ -743,21 +729,21 @@ summary(bin)
 ```
 
 ```
-  levels freq       rate
-1     B1   44 0.29333333
-2     B2    7 0.04666667
-3     B3   57 0.38000000
-4     B4   42 0.28000000
+  levels freq      rate
+1     B1   50 0.3333333
+2     B2   25 0.1666667
+3     B3   45 0.3000000
+4     B4   30 0.2000000
 ```
 ]
-
+--
 .pull-right[
 
 ```r
 plot(bin)
 ```
 
-![](dlookr_slides_files/figure-html/unnamed-chunk-27-1.png)&lt;!-- --&gt;
+![](dlookr_slides_files/figure-html/unnamed-chunk-30-1.png)&lt;!-- --&gt;
 ]
 
 
@@ -766,7 +752,7 @@ plot(bin)
 
 pre {
   max-width: 600px;
-  max-height: 300px;
+  max-height: 200px;
   overflow-x: auto;
   overflow-y: scroll;
   font-weight: 300;
