--- a/dlookr_slides.html
+++ b/dlookr_slides.html
@@ -4,7 +4,7 @@
     <title>dlookr Package</title>
     <meta charset="utf-8" />
     <meta name="author" content="Rachel Heise" />
-    <meta name="date" content="2022-09-19" />
+    <meta name="date" content="2022-10-02" />
     <script src="libs/header-attrs-2.15/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
     <link rel="stylesheet" href="extra.css" type="text/css" />
@@ -33,13 +33,13 @@ background-size: cover
 
 &lt;img src="img/dlookr_hex.png" alt="dlookr-hex-sticker" width="180" /&gt;
 
-&lt;h3 style="color: gray;"&gt;Rachel Heise | WCM Computing Club | September 22, 2022&lt;/h3&gt;
+&lt;h3 style="color: gray;"&gt;Rachel Heise | WCM Computing Club | October 4, 2022&lt;/h3&gt;
 
 ---
 
 # dlookr
 
-- Package for exploratory data analysis
+- R package for exploratory data analysis
 
   - Data diagnosis
   
@@ -49,9 +49,9 @@ background-size: cover
 
 --
 
-- What are the advantages of dlookr?
+- What are the advantages of `dlookr`?
 
-  - Seamless integration with `dplyr`
+  - `dlookr` functions output dataframes for seamless integration with `dplyr`
 
   - Use of `plot` and `summary` functions to quickly view diagnostic data
 
@@ -76,8 +76,6 @@ background-size: cover
   - Species (categorical, add NA)
     
 ]
-
---
 
 .pull-right[
 
@@ -123,7 +121,6 @@ iris %&gt;% data.table()
 
 ]
 
---
 
 .pull-right[
 
@@ -252,7 +249,6 @@ iris %&gt;%
   - Rank of each level by number of observations
 
 ]
---
 
 .pull-right[
 
@@ -456,11 +452,9 @@ iris %&gt;%
 
 .pull-left[
 
-- Target variables are similar to `group_by()` in `dplyr`
+- Target variables are created using the `target_by()` function and are used to explore the relationship between a categorical variable and other variable values
 
-- Target variables are used to explore the relationship between a categorical variable and other variable values
-
-  - `target_by` function
+  - Target variables are similar to `group_by()` in `dplyr`
 
 ]
 --
@@ -498,7 +492,7 @@ plot(cat_num)
 .pull-right[
 
 ```r
-sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Species, method = "knn")
+sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Petal.Length, method = "knn")
 summary(sepallength_im)
 ```
 
@@ -511,16 +505,16 @@ summary(sepallength_im)
 described_variables "value"      "value"     
 n                   "146"        "150"       
 na                  "4"          "0"         
-mean                "5.869178"   "5.846000"  
-sd                  "0.8211485"  "0.8232982" 
-se_mean             "0.06795873" "0.06722202"
+mean                "5.869178"   "5.846767"  
+sd                  "0.8211485"  "0.8224163" 
+se_mean             "0.06795873" "0.06715001"
 IQR                 "1.3"        "1.3"       
-skewness            "0.3041458"  "0.3387008" 
-kurtosis            "-0.5505983" "-0.5577333"
+skewness            "0.3041458"  "0.3407754" 
+kurtosis            "-0.5505983" "-0.5545574"
 p00                 "4.3"        "4.3"       
 p01                 "4.4"        "4.4"       
 p05                 "4.7"        "4.7"       
-p10                 "4.9"        "4.8"       
+p10                 "4.900000"   "4.801308"  
 p20                 "5"          "5"         
 p25                 "5.1"        "5.1"       
 p30                 "5.40"       "5.27"      
@@ -556,7 +550,7 @@ p100                "7.9"        "7.9"
 
 
 ```r
-sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Species, method = "knn")
+sepallength_im &lt;- imputate_na(iris, Sepal.Length, yvar = Petal.Length, method = "knn")
 ```
 
 
@@ -578,8 +572,7 @@ plot(sepallength_im)
 
 
 ```r
-library(mice)
-species_im &lt;- imputate_na(iris, Species, method = "mice")
+species_im &lt;- imputate_na(iris, Species, method = "rpart")
 ```
 
 
@@ -588,9 +581,8 @@ summary(species_im)
 ```
 
 ```
-* Impute missing values based on Multivariate Imputation by Chained Equations
- - method : mice
- - random seed : 25565
+* Impute missing values based on Recursive Partitioning and Regression Trees
+ - method : rpart
 
 * Information of Imputation (before vs after)
            original imputation original_percent imputation_percent
@@ -736,9 +728,9 @@ Sepal.Length  Sepal.Width
 
   - quantile
   - equal
-  - pretty (?)
+  - pretty (Computes equally spaced ‘round’ values that are 1, 2 or 5 times a power of 10)
   - kmeans
-  - bclust
+  - bclust (bagged clustering)
 ]
 
 --
@@ -778,7 +770,7 @@ summary(bin)
 4     B4   30 0.2000000
 ```
 ]
---
+
 .pull-right[
 
 ```r
@@ -787,6 +779,10 @@ plot(bin)
 
 ![](dlookr_slides_files/figure-html/unnamed-chunk-32-1.png)&lt;!-- --&gt;
 ]
+
+---
+
+# Questions?
 
 
 &lt;style type="text/css"&gt;
